RESOLVED FIXED234505
[Win] MSVC reports "DragImageCairoWin.cpp(142): error C2362: initialization of 'cr' is skipped by 'goto exit'" with /std:c++20
https://bugs.webkit.org/show_bug.cgi?id=234505
Summary [Win] MSVC reports "DragImageCairoWin.cpp(142): error C2362: initialization o...
Fujii Hironori
Reported 2021-12-19 22:28:26 PST
[Win] MSVC reports "DragImageCairoWin.cpp(142): error C2362: initialization of 'cr' is skipped by 'goto exit'" with /std:c++20 > Source\WebCore\platform\win\DragImageCairoWin.cpp(142): error C2362: initialization of 'cr' is skipped by 'goto exit' > Source\WebCore\platform\win\DragImageCairoWin.cpp(131): note: see declaration of 'cr' > Source\WebCore\platform\win\DragImageCairoWin.cpp(142): note: see declaration of 'exit' > Source\WebCore\platform\win\DragImageCairoWin.cpp(142): error C2362: initialization of 'srcImage' is skipped by 'goto exit' > Source\WebCore\platform\win\DragImageCairoWin.cpp(126): note: see declaration of 'srcImage' > Source\WebCore\platform\win\DragImageCairoWin.cpp(142): note: see declaration of 'exit'
Attachments
Patch (6.98 KB, patch)
2021-12-19 22:30 PST, Fujii Hironori
no flags
Patch (2.13 KB, patch)
2021-12-19 22:40 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-12-19 22:30:43 PST
Fujii Hironori
Comment 2 2021-12-19 22:40:25 PST
Fujii Hironori
Comment 3 2021-12-20 11:55:03 PST
Comment on attachment 447586 [details] Patch Clearing flags on attachment: 447586 Committed r287268 (245424@trunk): <https://commits.webkit.org/245424@trunk>
Fujii Hironori
Comment 4 2021-12-20 11:55:07 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2021-12-20 11:56:23 PST
Note You need to log in before you can comment on or make changes to this bug.