[Win] MSVC reports "DragImageCairoWin.cpp(142): error C2362: initialization of 'cr' is skipped by 'goto exit'" with /std:c++20 https://bugs.webkit.org/show_bug.cgi?id=234505

Reviewed by Don Olmstead.

* platform/win/DragImageCairoWin.cpp:
(WebCore::scaleDragImage):
Reimplemented without goto statements.


Canonical link: https://commits.webkit.org/245424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287268 268f45cc-cd09-0410-ab3c-d52691b4dbfc